crates/codegen/language/tests/src/fail/definitions/duplicate_item_name/test.stderr
error: An item with the name 'Bar1' already exists.
  --> src/fail/definitions/duplicate_item_name/test.rs:17:31
   |
17 |                 Struct(name = Bar1, fields = (field = Required(Bar2))),
   |                               ^^^^
